--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -8,3 +8,15 @@
     <button type="submit">Нажать</button>
     </form>
 {% endblock %}
+
+{#{% extends 'base.html' %}#}
+{#{% block title %}Забыли пароль?{% endblock %}#}
+{#{% block content %}#}
+{#    <h1> Забыли пароль? </h1>#}
+{#    <p> Введите свой адрес электронной почты ниже, и мы отправим вам инструкции по установке нового пароля. </p>#}
+{#    <form method="POST">#}
+{#        {% csrf_token %}#}
+{#        {{ form.as_p }}#}
+{#        <input type="submit" value="Отправить мне инструкции!">#}
+{#    </form>#}
+{#{% endblock %}#}
