--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,24 @@
         <a href="{% url 'home' %}">Home</a>
     </li>
 </ul>
+
+{#<h1>Welcome to our WiKiFood! </h1>#}
+{#<ul>#}
+{#    <li><a href="/">Main</a></li>#}
+{#    {% if user.is_authenticated %}#}
+{#   <li>Welcome, {{ user.username|title }}! (<a href="{% url 'logout' %}">logout</a>)</li>#}
+{##}
+{#    {% else %}#}
+{#    <li><a href="{% url 'register' %}">Login/Register</a></li>#}
+{#    {% endif %}#}
+
+
+{#    <li><a href="{% url 'get_receipt' %}">Search for recipe </a></li>#}
+{#    <li><a href="{% url 'all_receipt' %}">Get all food recipes</a></li>#}
+{#    <li><a href="{% url 'create_category' %}">Create new category</a></li>#}
+{#    <li><a href="{% url 'add_receipt' %}">Add food recipe</a></li>#}
+{#</ul>#}
+
 {% block content %}
 {% endblock %}
 <script src="{% static "js/bootstrap.bundle.js" %}"></script>
