--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,10 @@
 {#    {% endif %}#}
 
 
-{#    <li><a href="{% url 'get_receipt' %}">Search for recipe </a></li>#}
-{#    <li><a href="{% url 'all_receipt' %}">Get all food recipes</a></li>#}
-{#    <li><a href="{% url 'create_category' %}">Create new category</a></li>#}
-{#    <li><a href="{% url 'add_receipt' %}">Add food recipe</a></li>#}
+{# +   <li><a href="{% url 'get_receipt' %}">Search for recipe </a></li>#}
+{# +    <li><a href="{% url 'all_receipt' %}">Get all food recipes</a></li>#}
+{# +    <li><a href="{% url 'create_category' %}">Create new category</a></li>#}
+{# +    <li><a href="{% url 'add_receipt' %}">Add food recipe</a></li>#}
 {#</ul>#}
 
 {% block content %}
