--- a/templates/drink/main.html
+++ b/templates/drink/main.html
@@ -4,9 +4,17 @@
 <h2>Recent recipes:</h2>
     <ul>
         {% for receipt in recent_receipts %}
-            <li><a href="{% url 'receipt_detail' receipt.pk %}">{{ receipt.name }}</a> - {{ receipt.time }} minutes</li>
+        <li><a href="{% url 'receipt_detail' receipt.pk %}">{{ receipt.name }}</a> - {{ receipt.time }} minutes</li>
         {% endfor %}
     </ul>
+    
+    <ul>
+        <li><a href="{% url 'create_category' %}">Create new category</a></li>
+        <li><a href="{% url 'add_receipt' %}">Add food recipe</a></li>
+        <li><a href="{% url 'all_receipt' %}">Get all food recipes</a></li>
+        <li><a href="{% url 'get_receipt' %}">Search for recipe </a></li>
+    </ul>   
+    
 <img src="https://images.pexels.com/photos/2814828/pexels-photo-2814828.jpeg" alt="Various products" style="width: 600px">
 <p>This is the main page of our food library. Here your can study different recipes and share yours!</p>
 {% endblock %}
