--- a/templates/drink/receipt_detail.html
+++ b/templates/drink/receipt_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block title %}Recipe details{% endblock %}
 {% block content %}
 <h1>{{ receipt.name }}</h1>
@@ -8,8 +9,24 @@
     <p><strong>Time:</strong> {{ receipt.time }} minutes</p>
     <p><strong>Author name:</strong> {{ receipt.author }}  </p>
 
+    
+    <img src="{% static 'receipt_photos/mohito_7wn42YG.jpg' %}" alt="Мохито">
+    <img src="{{ receipt.photo.url }}" alt="Мохито">
+
     {% if receipt.photo %}
         <img src="{{ receipt.photo.url }}" alt="{{ receipt.name }}">
+    {% endif %}
+    
+    {% if receipt.photo %}
+    <p>Photo URL: {{ receipt.photo.url }}</p>
+        <img src="{{ receipt.photo.url }}" alt="{{ receipt.name }}">
+    {% endif %}
+    
+    {% if receipt.photo %}
+        <p>Photo URL: {{ receipt.photo.url }}</p>
+        <img src="{{ receipt.photo.url }}" alt="{{ receipt.name }}">
+    {% else %}
+        <p>No photo available.</p>
     {% endif %}
     <br>
     <p>Know how to make better? <a href="{% url 'modify_receipt' receipt_id=receipt.id %}">Edit current recipe!</a></p>
