--- a/templates/drink/create_category.html
+++ b/templates/drink/create_category.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
-{% block title %}Create category{% endblock %}
+{% block title %}Сategory{% endblock %}
+
 {% block content %}
-{% if user.is_authenticated %}
-<h1>Create new category</h1>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Create category</button>
-</form>
-{% else %}
-Please login to create category
-<li><a href="{% url 'authorization' %}">Login/Register</a></li>
-{% endif %}
+    {#{% if user.is_authenticated %}#}
+    <h1>Создать новую категорию</h1>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Создать</button>
+    </form>
+    {#{% else %}#}
+    {#Please login to create category#}
+    {#<li><a href="{% url 'authorization' %}">Login/Register</a></li>#}
+{#    {% endif %}#}
 {% endblock %}
