--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,42 @@
 {% extends "base.html" %}
-{% block content %}
-    <h1>Home page</h1>    
-    {% if user.is_authenticated %}
-        <form action="{% url 'logout' %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Log out</button>  
-        <hr>
-        <a href="{% url 'main' %}">Receipt</a> 
-    {% else %}
-    	<a href="{% url 'login' %}">Login</a> | 
-        <a href="{% url 'register' %}">Register</a>        
-               
-    {% endif %} 
-    
-    <h2>Recent recipes:</h2>
+{% load static %}
 
-<img src="https://images.pexels.com/photos/2814828/pexels-photo-2814828.jpeg" alt="Various products" style="width: 600px">
-<p>This is the main page of our food library. Here your can study different recipes and share yours!</p>
+{% block content %}    
+    
+    <h1 class="txt_centr">Добро пожаловать в мир напитков</h1>    
+   
+    
+    <h3 class="txt_centr">Большой выбор всевозможых и актуальных рецептов</h3>
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img style="margin: 0 auto" src="{% static 'images/mohito.jpg' %}" class="d-block w-50 carus_img" alt="...">
+        <h5 class="txt_centr">Мохито в домашних условиях</h5>
+        <p class="txt_centr">Как сделать мохито в домашних условиях. Делюсь рецептом освежающего безалкогольного...</p>
+    </div>
+    <div class="carousel-item">
+      <img style="margin: 0 auto" src="{% static 'images/lemonad.jpg' %}" class="d-block w-50" alt="...">
+        <h5 class="txt_centr">Домашний лимонад</h5>
+        <p class="txt_centr">Из своего далекого детства в СССР я помню тележки с газировкой на улицах, где можно...</p>
+    </div>
+    <div class="carousel-item">
+      <img style="margin: 0 auto" src="{% static 'images/punsh.jpg' %}" class="d-block w-50" alt="...">
+        <h5 class="txt_centr">Коктейль Том и Джерри</h5>
+        <p class="txt_centr">Этот горячий пунш с пряностями, один из старейших коктейлей с полуторавековой истор...</p>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Предыдущий</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Следующий</span>
+  </button>
+</div>
+    
+    
+    
+
 {% endblock %}
