--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                     <hr>
                     <a href="{% url 'get_receipt' %}">Найти рецепт</a>
                 </div>
+                </form>
             {% else %}
                 <a class="a_color" href="{% url 'login' %}">Войти</a> |
                 <a class="a_color" href="{% url 'register' %}">Регистрация</a>
