--- a/templates/drink/receipt_detail.html
+++ b/templates/drink/receipt_detail.html
@@ -18,6 +18,6 @@
         <p>No photo available.</p>
     {% endif %}
     <br>
-    <p>Know how to make better? <a href="{% url 'modify_receipt' receipt_id=receipt.id %}">Edit current recipe!</a></p>
+    <p>Хотите изменить <a href="{% url 'modify_receipt' receipt_id=receipt.id %}">Редактировать</a></p>
 
 {% endblock %}
