--- a/templates/drink/add_receipt.html
+++ b/templates/drink/add_receipt.html
@@ -2,15 +2,12 @@
 {% block title %}Add recipe{% endblock %}
 {% block content %}
 
-{% if user.is_authenticated %}
-<h1>Add new receipt</h1>
+
+<h1>Добавьте новый рецепт</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save recipe</button>
 </form>
-{% else %}
-Please login to add a new receipt
-<li><a href="{% url 'authorization' %}">Login/Register</a></li>
-{% endif %}
+
 {% endblock %}
