--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,16 @@
         <h5 class="txt_centr">Коктейль Том и Джерри</h5>
         <p class="txt_centr">Этот горячий пунш с пряностями, один из старейших коктейлей с полуторавековой истор...</p>
     </div>
+    <div class="carousel-item">
+      <img style="margin: 0 auto" src="{% static 'images/kefir.jpg' %}" class="d-block w-50" alt="...">
+        <h5 class="txt_centr">Коктейль из кефира, зефира и банана</h5>
+        <p class="txt_centr">Великолепный рецепт утреннего коктейля! Благодаря банану и зефиру он получается сла...</p>
+    </div>
+    <div class="carousel-item">
+      <img style="margin: 0 auto" src="{% static 'images/shokolad.jpg' %}" class="d-block w-50" alt="...">
+        <h5 class="txt_centr">Горячий шоколада</h5>
+        <p class="txt_centr">Поднять себе настроение, посмотреть любимый фильм, укутавшись пледом, с кружкой люби...</p>
+    </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
